--- a/app/src/main/res/layout/ac_camera.xml
+++ b/app/src/main/res/layout/ac_camera.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +16,10 @@
         android:layout_height="35dp"
         android:layout_above="@+id/btn_record"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="140dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:background="@drawable/record_speed_background"
         android:orientation="horizontal">
 
@@ -70,21 +75,45 @@
             android:textColor="@drawable/record_speed_button_text" />
     </RadioGroup>
 
-    <com.dramascript.inccamera.widget.RecordButton
-        android:id="@+id/btn_record"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
+    <RelativeLayout
+        xmlns:loonggg="http://schemas.android.com/apk/res-auto"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="20dp"
-        android:background="@drawable/record_press_button_background"
-        android:gravity="center"
-        android:text="按住拍" />
+        app:layout_constraintStart_toStartOf="parent">
+
+        <com.dramascript.inccamera.widget.CircleProgressBar
+            android:id="@+id/cpb"
+            android:layout_width="86dp"
+            android:layout_height="86dp"
+            android:layout_centerInParent="true"
+            loonggg:bgProgressBarColor="#33ffffff"
+            loonggg:circleStrokeWidth="8dp" />
+
+        <com.dramascript.inccamera.widget.RecordButton
+            android:id="@+id/btn_record"
+            android:layout_width="74dp"
+            android:layout_height="74dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/record_press_button_background"
+            android:gravity="center"
+            android:text="按住拍" />
+
+    </RelativeLayout>
+
+
 
     <CheckBox
         android:id="@+id/beauty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="美颜" />
+        android:layout_above="@+id/rg_speed"
+        android:text="美颜"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toTopOf="@+id/rg_speed"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
